<resources>
    <string name="app_name">MediPal</string>
    <string name="action_medicine">Medicine</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Sign out</string>
    <string name="action_biodata">Biodata</string>
    <string name="action_health_measurement">Health Measurement</string>
    <string name="action_sort_emergency_contacts">Prioritise</string>
    <string name="action_done_sort_emergency_contacts">Done</string>
    <string name="action_filter_consumption_history">Filter</string>
    <string name="action_filter_today_consumption_history">Today</string>
    <string name="action_filter_this_week_consumption_history">This Week</string>
    <string name="action_filter_this_month_consumption_history">This Month</string>
    <string name="action_filter_custom_range_consumption_history">Custom Range</string>
    <string name="action_generate_medical_reports">Generate Medical Reports</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- String related to EmergencyContacts -->
    <string name="title_activity_add_emergency_contact">AddEmergencyContactActivity</string>
    <string name="title_activity_edit_emergency_contact">EditEmergencyContactActivity</string>
    <string name="title_activity_prioritise_emergency_contact">PrioritiseEmergencyContactActivity</string>

    <!-- String related to Biodata -->
    <string name="title_activity_biodata">BiodataActivity</string>
    <string name="title_activity_add_biodata">AddBiodataActivity</string>

    <!-- String related to Medicine -->
    <string name="title_activity_medicine">MedicineActivity</string>
    <string name="title_activity_add_medicine">AddMedicineActivity</string>

    <!-- String related to Appointment -->
    <string name="title_activity_add_appointment">AddAppointmentActivity</string>
    <string name="title_activity_add_medical_record">AddMedicalRecordActivity</string>
    <string name="title_activity_health_measurement">HealthMeasurementActivity</string>
    <string name="title_activity_edit_appointment">EditAppointmentActivity</string>
    <string name="reminder_on">Reminder ON</string>
    <string name="reminder_off">Reminder OFF</string>

    <!-- String related to Medicine Prescription -->
    <string name="title_activity_add_edit_medicine_prescription">AddEditMedicinePrescriptionActivity</string>

    <!-- String related to Medicine Prescription -->
    <string name="title_activity_consumption_history">ConsumptionHistory</string>
    <string name="title_activity_add_consumption_history">AddConsumptionHistory</string>

    <string name="title_activity_edit_reminder">EditReminderActivity</string>
    <string name="preference_file_key">sg.edu.nus.iss.se8.medipal.PREFERENCE_FILE_KEY</string>
    <string name="has_user_checked_dont_show_me_again">has_user_checked_dont_show_me_again</string>


    <!-- Blood Group Spinner -->
    <string-array name="bloodgroup">
        <item>A</item>
        <item>A+</item>
        <item>B</item>
        <item>B+</item>
        <item>AB</item>
        <item>AB+</item>
        <item>O</item>
        <item>O+</item>
        <item>O-</item>

    </string-array>

    <string-array name="report">
        <item>Health Measurement</item>
        <item>Medicine Consumption</item>
    </string-array>

    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="onboarding_guide_text">This is your friendly guide to getting started with MediPal. Please follow the steps below and we\'ll help you get right into it!</string>

</resources>
