<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="sg.edu.nus.iss.se8.samplewithmenu.MainActivity">

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="10"
        android:title="@string/action_sort_emergency_contacts"
        android:icon="@drawable/ic_swap_priority"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_filter"
        android:orderInCategory="10"
        android:title="@string/action_filter_consumption_history"
        android:icon="@drawable/ic_filter"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_medicine"
        android:orderInCategory="100"
        android:title="@string/action_medicine"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_biodata"
        android:orderInCategory="100"
        android:title="@string/action_biodata"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_health_measurement"
        android:orderInCategory="100"
        android:title="@string/action_health_measurement"
        app:showAsAction="never" />

   <item
        android:id="@+id/action_report"
        android:orderInCategory="100"
        android:title="Report"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="Help"
        app:showAsAction="never" />

</menu>
