<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="sg.edu.nus.iss.se8.medipal.activities.consumptionhistory.ConsumptionHistoryActivity">

    <item
        android:id="@+id/action_filter_today"
        android:orderInCategory="100"
        android:title="@string/action_filter_today_consumption_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter_this_week"
        android:orderInCategory="100"
        android:title="@string/action_filter_this_week_consumption_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter_this_month"
        android:orderInCategory="100"
        android:title="@string/action_filter_this_month_consumption_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter_custom_range"
        android:orderInCategory="100"
        android:title="@string/action_filter_custom_range_consumption_history"
        app:showAsAction="never" />
</menu>
